# RaptorV

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/danvexteam/raptorv/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/core/: RaptorEngine.cpp  RaptorEngine.h
app/src/main/cpp/jni/: bridge.cpp
app/src/main/java/com/danvexteam/raptorv/: MainActivity.kt  RaptorNative.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/danvexteam/raptorv/: ExampleUnitTest.kt
gradle/: libs.versions.toml
raptorv/: build.gradle.kts
raptorv/src/main/: AndroidManifest.xml
raptorv/src/main/cpp/: CMakeLists.txt
raptorv/src/main/cpp/core/: RaptorEngine.cpp  RaptorEngine.h
raptorv/src/main/cpp/include/raptor/: Engine.h  Platform.h  Renderer.h  ResourceManager.h  Scene.h  Types.h
raptorv/src/main/cpp/jni/: bridge.cpp
raptorv/src/main/cpp/physics/: PhysicsWorld.cpp  PhysicsWorld.h
raptorv/src/main/cpp/render/: Renderer.cpp  Renderer.h
raptorv/src/main/cpp/scene/: Components.h  Entity.h  Scene.cpp  Scene.h
raptorv/src/main/cpp/src/core/: Engine.cpp  EngineImpl.h
raptorv/src/main/cpp/src/physics/: PhysicsWorld.cpp  PhysicsWorld.h
raptorv/src/main/cpp/src/platform/android/: AndroidFileSystem.cpp  AndroidFileSystem.h  AndroidWindow.h
raptorv/src/main/cpp/src/render/: Renderer.cpp  RendererImpl.h
raptorv/src/main/cpp/src/resources/: ResourceManager.cpp  ResourceManagerImpl.h
raptorv/src/main/cpp/src/scene/: Components.h  Scene.cpp  SceneImpl.h
raptorv/src/main/java/com/danvexteam/raptorv/: Camera.kt  Engine.kt  Entity.kt  Light.kt  RaptorNative.kt  RaptorView.kt  Scene.kt
raptorv/src/main/java/com/danvexteam/raptorv/internal/: RaptorNative.kt
raptorv/src/main/java/com/danvexteam/raptorv/types/: Types.kt
sandbox/: build.gradle.kts
sandbox/src/androidTest/java/com/danvexteam/sandbox/: ExampleInstrumentedTest.kt
sandbox/src/main/: AndroidManifest.xml
sandbox/src/main/java/com/danvexteam/sandbox/: MainActivity.kt
sandbox/src/main/res/layout/: activity_main.xml
sandbox/src/main/res/values/: themes.xml
sandbox/src/main/res/values-night/: themes.xml
sandbox/src/test/java/com/danvexteam/sandbox/: ExampleUnitTest.kt
